--- a/src/components/Input/InputComponent.scss
+++ b/src/components/Input/InputComponent.scss
@@ -1,4 +1,11 @@
 .input {
+
+  margin-bottom: 5px;
+
+  &.hidden {
+    display: none;
+  }
+
   input {
     border: 1px solid #cccccc;
     border-radius: 6px;
@@ -7,11 +14,12 @@
     box-sizing: border-box;
     background-color: #fff;
     margin: 0;
-  }
-  margin-bottom: 5px;
 
-  &.hidden {
-    display: none;
+    @media (prefers-color-scheme: dark) {
+      color: #f5f5f5;
+      background-color: rgb(9, 17, 24)
+    }
+
   }
 }
 
@@ -23,6 +31,17 @@
     width: 100%;
     box-sizing: border-box;
     background-color: #fff;
+
+    @media (prefers-color-scheme: dark) {
+      color: #f5f5f5;
+      background-color: rgb(9, 17, 24)
+    }
+  }
+}
+
+select {
+  option {
+    margin: 5px 0;
   }
 }
 
