--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -289,3 +289,13 @@ a {
 .recharts-wrapper {
   background: $blackHaze;
 }
+
+.icon-explanation {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+
+  .auth-link {
+    color: $cornFlowerBlue;
+  }
+}
